<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cslHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5A76F1"
            android:padding="20sp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvResultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Bệnh úa muộn"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cslHeader" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uamuon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvTrieuChung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Triệu chứng"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="10sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            app:layout_constraintTop_toBottomOf="@id/image"/>

        <TextView
            android:id="@+id/tvTrieuChungDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/trieu_chung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTrieuChung" />

        <TextView
            android:id="@+id/tvBienPhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Biện pháp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="20sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            app:layout_constraintTop_toBottomOf="@id/tvTrieuChungDetail"/>

        <TextView
            android:id="@+id/tvBienPhapDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/bien_phap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBienPhap" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>